# Boggle

./: CMakeLists.txt  game_window.cpp  game_window.h  main.cpp  resources.qrc
sources/: block.h  board.cpp  board.h  lettersmap.h
sources/libgameitems/src/: board.cpp  board.h  cube.cpp  cube.h  types.h
sources/libgameitems/tests/: board_test.cpp
sources/libloader/src/: loader.cpp  loader.h
sources/libloader/tests/: board_test.cpp  lettersmap_test.cpp  loader_test.cpp
